--- a/Configuration/config.json
+++ b/Configuration/config.json
@@ -1,5 +1,5 @@
 {
-    "starttime": 1632052078.04401,
+    "starttime": 1633347455.6785874,
     "fail_emoji": "<a:aFail:848315264491192320>",
     "success_emoji": ":white_check_mark:",
     "embed_color": [
